[gd_scene load_steps=6 format=2]

[ext_resource path="res://White-square.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/enemy_script.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55, 60.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.9259, 19.9206 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.8677, 75.5977 )

[node name="Enemies" type="KinematicBody2D"]
scale = Vector2( 0.502661, 0.502661 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.501228, 1.24436 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.11175, 0.296777 )
texture = ExtResource( 1 )

[node name="Sensors" type="Node2D" parent="."]

[node name="Sensor_1" type="Area2D" parent="Sensors"]
position = Vector2( 198.941, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensors/Sensor_1"]
shape = SubResource( 2 )

[node name="Sensor_2" type="Area2D" parent="Sensors"]
position = Vector2( 0, 224.804 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensors/Sensor_2"]
shape = SubResource( 2 )

[node name="Sensor_3" type="Area2D" parent="Sensors"]
position = Vector2( -198.941, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensors/Sensor_3"]
shape = SubResource( 2 )

[node name="Sensor_4" type="Area2D" parent="Sensors"]
position = Vector2( 0, -224.804 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensors/Sensor_4"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Sensors/Sensor_1" to="." method="_on_Sensor_1_body_entered"]
[connection signal="body_exited" from="Sensors/Sensor_1" to="." method="_on_Sensor_1_body_exited"]
[connection signal="body_entered" from="Sensors/Sensor_2" to="." method="_on_Sensor_2_body_entered"]
[connection signal="body_exited" from="Sensors/Sensor_2" to="." method="_on_Sensor_2_body_exited"]
[connection signal="body_entered" from="Sensors/Sensor_3" to="." method="_on_Sensor_3_body_entered"]
[connection signal="body_exited" from="Sensors/Sensor_3" to="." method="_on_Sensor_3_body_exited"]
[connection signal="body_entered" from="Sensors/Sensor_4" to="." method="_on_Sensor_4_body_entered"]
[connection signal="body_exited" from="Sensors/Sensor_4" to="." method="_on_Sensor_4_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
